infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "chat-clsip-srv"
spec:
  rules:
    - host: jobpilot.dev
      http:
        paths:
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clsip-srv
                port:
                  number: 3000
          - path: /api/v6/admin/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clsip-srv
                port:
                  number: 3000
          - path: /api/v2/employer/?(.*)
            pathType: Prefix
            backend:
              service:
                name: employer-clsip-srv
                port:
                  number: 3001
          - path: /api/v3/job/?(.*)
            pathType: Prefix
            backend:
              service:
                name: job-clsip-srv
                port:
                  number: 3002  
          - path: /api/v4/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-clsip-srv
                port:
                  number: 3003
          - path: /api/v5/chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-clsip-srv
                port:
                  number: 3004
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-clsip-srv
                port:
                  number: 3004
